--- a/lib/bower.json
+++ b/lib/bower.json
@@ -18,6 +18,9 @@
     "angular": "^1.5.6",
     "angularfire": "^2.0.1",
     "Materialize": "materialize#^0.97.6",
-    "angular-route": "^1.5.6"
+    "angular-route": "^1.5.6",
+    "jquery": "^2.2.4",
+    "firebase": "^3.0.3",
+    "gulp": "^3.9.1"
   }
 }
